--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aws-amplify/auth",
+  "name": "@aws-amplify/pubsub",
   "version": "0.0.1",
-  "description": "The Auth category of AWS Amplify",
+  "description": "PubSub category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -41,18 +41,17 @@
     "ts-jest": "^22.0.0",
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.3.0",
-    "typedoc-dep-update": "^0.9.0",
     "typescript": "2.6.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "amazon-cognito-auth-js": "^1.1.9",
-    "amazon-cognito-identity-js": "^2.0.0",
+    "graphql": "^0.13.1",
+    "paho-mqtt": "^1.0.4",
+    "uuid": "^3.2.1",
     "aws-sdk": "2.198.0",
-    "@aws-amplify/common": "^0.0.2",
-    "@aws-amplify/cache": "^0.0.1"
+    "zen-observable": "^0.8.6"
   },
   "jest": {
     "transform": {
@@ -65,10 +64,6 @@
       "js",
       "json",
       "jsx"
-    ],
-    "setupFiles": [
-      "./__mocks__/SessionStorage.js",
-      "./__mocks__/LocalStorage.js"
     ],
     "testEnvironment": "jsdom",
     "mapCoverage": true,
