--- a/packages/aws-amplify-react-native/package.json
+++ b/packages/aws-amplify-react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify-react-native",
-  "version": "0.3.35",
+  "version": "0.3.43",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "dist/index.js",
   "scripts": {
@@ -23,7 +23,8 @@
     "aws-amplify": "^0.2.x",
     "axios": "^0.17.1",
     "babel-preset-es2015": "^6.24.1",
-    "react-native-create-bridge": "^2.0.1"
+    "react-native-aws-amplify-google-signin": "^1.0.9",
+    "react-native-fbsdk": "^0.7.0"
   },
   "repository": {
     "type": "git",
