--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - yarn test --scope aws-amplify
   - yarn test --scope aws-amplify-react
   - yarn test --scope @aws-amplify/common
+  - yarn test --scope @aws-amplify/cache
   - yarn coverage
