--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ script:
   - yarn build
   - yarn test --scope aws-amplify
   - yarn test --scope aws-amplify-react
-  - yarn test --scope @aws-amplify/common
+  - yarn test --scope @aws-amplify/core
   - yarn test --scope @aws-amplify/cache
   - yarn coverage
