--- a/packages/aws-amplify/tsconfig.json
+++ b/packages/aws-amplify/tsconfig.json
@@ -8,7 +8,8 @@
             "es5",
             "es2015",
             "dom",
-            "esnext.asynciterable"
+            "esnext.asynciterable",
+            "es2017.object"
         ],
         "sourceMap": true,
         "module": "commonjs",
