--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -64,6 +64,7 @@
     "axios": "^0.17.0",
     "graphql": "^0.13.1",
     "paho-mqtt": "^1.0.4",
+    "url": "^0.11.0",
     "uuid": "^3.2.1",
     "zen-observable": "^0.8.6"
   },
