--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -197,6 +197,10 @@ category_list:
           excerpt: Console logging utility.
           cta: Read more
           url: '/media/logger_guide'  
+        - title: Service Worker 
+          excerpt: A utility module to work with service workers. 
+          cta: Read more
+          url: '/media/service_workers_guide'  
     -  category: CLI
        title: CLI
        subs:
