service workers guide

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -198,7 +198,7 @@ category_list:
           cta: Read more
           url: '/media/logger_guide'  
         - title: Service Worker 
-          excerpt: A utility module to work with service workers. 
+          excerpt: A utility class to work with PWA and Service Worker APIs. 
           cta: Read more
           url: '/media/service_workers_guide'  
     -  category: CLI
