--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -80,6 +80,7 @@
       "json",
       "jsx"
     ],
+    "timers": "fake",
     "setupFiles": [
       "./__mocks__/SessionStorage.js",
       "./__mocks__/LocalStorage.js"
