--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "typescript": "2.6.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "cross-env": "^3.1.4"
   },
   "jest": {
     "transform": {
