--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,15 +31,15 @@ jobs:
 
       - run: yarn config set workspaces-experimental true
       - run: yarn
-      - run: yarn bootstrap
-      - run: yarn build
+      - run: yarn run bootstrap
+      - run: yarn run build
 
       #- save_cache:
       #    paths:
       #      - node_modules
       #    key: v1-dependencies-{{ checksum "package.json" }}
         
-      - run: yarn test --scope aws-amplify
-      - run: yarn test --scope aws-amplify-react
-      - run: yarn coverage
-      - run: yarn publish
+      - run: yarn run test --scope aws-amplify
+      - run: yarn run test --scope aws-amplify-react
+      - run: yarn run coverage
+      - run: yarn run publish
