--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,12 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
-dependencies:
-  pre:
-    - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+
 jobs:
   build:
+    dependencies:
+      pre:
+        - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
     branches:
       only:
         - master
@@ -31,7 +32,7 @@ jobs:
       #    - v1-dependencies-{{ checksum "package.json" }}
       #    # fallback to using the latest cache if no exact match is found
       #    - v1-dependencies-
-
+      #- run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - run: yarn config set workspaces-experimental true
       - run: yarn
       - run: yarn run bootstrap
@@ -42,9 +43,9 @@ jobs:
       #      - node_modules
       #    key: v1-dependencies-{{ checksum "package.json" }}
         
-      - run: yarn run test --scope aws-amplify
-      - run: yarn run test --scope aws-amplify-react
-      - run: yarn run coverage
+      #- run: yarn run test --scope aws-amplify
+      #- run: yarn run test --scope aws-amplify-react
+      #- run: yarn run coverage
       - run: git config --global user.email $GITHUB_EMAIL
       - run: git config --global user.name $GITHUB_USER
       - run: yarn run publish
