--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "lerna run -- clean",
     "format": "lerna run -- format",
     "lint": "lerna run -- lint",
-    "publish": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable"
+    "publish": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable --preid=unstable"
   },
   "pre-commit": [
     "pre-commit"
