--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,36 +6,24 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/node:8.11
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/aws-amplify
-
     steps:
       - checkout
-
-      # Download and cache dependencies
-      #- restore_cache:
-      #    keys:
-      #    - v1-dependencies-{{ checksum "package.json" }}
-      #    # fallback to using the latest cache if no exact match is found
-      #    - v1-dependencies-
-
       - run: yarn config set workspaces-experimental true
       - run: yarn
-      - run: yarn bootstrap
-      - run: yarn build
-
-      #- save_cache:
-      #    paths:
-      #      - node_modules
-      #    key: v1-dependencies-{{ checksum "package.json" }}
-        
-      - run: yarn test --scope aws-amplify
-      - run: yarn test --scope aws-amplify-react
-      - run: yarn coverage
+      - run: yarn run bootstrap
+      - run: yarn run build
+      - run: yarn run test --scope aws-amplify
+      - run: yarn run test --scope aws-amplify-react
+      - run: yarn run coverage
+      - run: git config --global user.email $GITHUB_EMAIL
+      - run: git config --global user.name $GITHUB_USER
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: 
+          name: "Publish to Amplify Package"
+          command: |
+            if [ -z "$CIRCLE_PULL_REQUEST" ]; then
+              yarn publish
+            else
+              echo "Skipping deploy."
+            fi
