--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           name: "Publish to Amplify Package"
           command: |
             if [ -z "$CIRCLE_PULL_REQUEST" ]; then
-              yarn run publish
+              yarn run publish:$CIRCLE_BRANCH
             else
               echo "Skipping deploy."
             fi
