update ci scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
           command: |
             if [ -z "$CIRCLE_PULL_REQUEST" ]; then
               yarn run publish:$CIRCLE_BRANCH
+              git push --follow-tags
             else
               echo "Skipping deploy."
             fi
