--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,20 +9,20 @@ jobs:
       - image: circleci/node:8.11
     steps:
       - checkout
-      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      - run: git config --global user.email $GITHUB_EMAIL
-      - run: git config --global user.name $GITHUB_USER
       - run: yarn config set workspaces-experimental true
       - run: yarn
       - run: yarn run bootstrap
       - run: yarn run build
-      - run: yarn run test --scope aws-amplify
-      - run: yarn run test --scope aws-amplify-react
-      - run: yarn run coverage
+      # - run: yarn run test --scope aws-amplify
+      # - run: yarn run test --scope aws-amplify-react
+      # - run: yarn run coverage
       - run:
           name: "Publish to Amplify Package"
           command: |
             if [ -z "$CIRCLE_PULL_REQUEST" ]; then
+              echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+              git config --global user.email $GITHUB_EMAIL
+              git config --global user.name $GITHUB_USER
               yarn run publish:$CIRCLE_BRANCH
             else
               echo "Skipping deploy."
