--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "lerna run -- lint",
     "publish:master": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable --preid=unstable --message 'Publish [ci skip]'",
     "publish:beta": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=beta --preid=beta --message 'Publish [ci skip]'",
-    "publish:release": "lerna publish --conventional-commits --yes --independent --message 'Publish [ci skip]'"
+    "publish:release": "lerna publish --conventional-commits --cd-version=patch --yes --independent --message 'Publish [ci skip]'"
   },
   "pre-commit": [
     "pre-commit"
