--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -26,7 +26,7 @@
     "type": "git",
     "url": "https://github.com/aws/aws-amplify.git"
   },
-  "license": "See LICENSE",
+  "license": "SEE LICENSE IN LICENSE.txt",
   "licenses": [
     {
       "type": "Amazon Software License",
