--- a/packages/aws-amplify-angular/tsconfig.json
+++ b/packages/aws-amplify-angular/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "noImplicitAny": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
