--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 /docs/ @mbahar
-/packages/aws-amplify-angular/ @haverchuck @richardzcode
-/packages/aws-amplify/src/Auth/ @richardzcode @powerful23
-/packages/aws-amplify/src/Analytics/ @powerful23 @richardzcode
+/packages/aws-amplify-angular/ @haverchuck
+/packages/aws-amplify/src/Auth/ @powerful23
+/packages/aws-amplify/src/Analytics/ @powerful23
 /packages/aws-amplify-react/ @powerful23
 /packages/aws-amplify/src/API/ @elorzafe
 /packages/aws-amplify/src/Cache/ @elorzafe @nidsharm
