--- a/packages/aws-amplify/tsconfig.json
+++ b/packages/aws-amplify/tsconfig.json
@@ -17,8 +17,7 @@
         "allowJs": false,
         "declaration": true,
         "typeRoots": [
-            "./node_modules/@types",
-            "../../node_modules/@types"
+            "./node_modules/@types"
         ]
     },
     "include": [
