--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "lerna bootstrap",
     "pre-commit": "lerna exec yarn test --scope aws-amplify",
     "test": "lerna exec yarn test",
+    "cypress": "lerna exec yarn cypress",
     "coverage": "codecov",
     "docs": "typedoc packages/aws-amplify/src --excludePrivate --ignoreCompilerErrors --mode file --theme docs/amplify-theme/typedoc --out docs/api",
     "build": "lerna exec yarn build",
@@ -37,6 +38,7 @@
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
     "codecov": "^1.0.1",
+    "cypress": "^3.0.1",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
