--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --coverage --updateSnapshot",
-    "build": "npm run clean && babel src --presets babel-preset-react --out-dir dist --copy-files",
+    "build": "yarn run clean && babel src --presets babel-preset-react --out-dir dist --copy-files",
+    "watch": "yarn run clean && babel src --presets babel-preset-react --out-dir dist --copy-files --watch",
     "build-with-test": "npm test && npm run build",
     "clean": "rimraf dist"
   },
