--- a/packages/aws-amplify-react/package.json
+++ b/packages/aws-amplify-react/package.json
@@ -4,7 +4,7 @@
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest --coverage --updateSnapshot",
+    "test": "jest --coverage --updateSnapshot --maxWorkers 2",
     "build": "yarn run clean && babel src --presets babel-preset-react --out-dir dist --copy-files",
     "watch": "yarn run clean && babel src --presets babel-preset-react --out-dir dist --copy-files --watch",
     "build-with-test": "npm test && npm run build",
