fix(integration tests): CircleCI workflows and Cypress integration testing (#1071)
* CircleCI workflows and Cypress integration testing

* Set max workers for Jest to resolve CI memory limitations

* Add script for running cypress with GUI

* Update amplify core type checking

* Deploy workflow on release branch and cypress artifacts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bootstrap": "lerna bootstrap",
     "pre-commit": "lerna exec yarn test --scope aws-amplify",
     "test": "lerna exec yarn test",
+    "cypress": "lerna exec yarn cypress",
+    "cypress:open": "lerna exec yarn cypress:open",
     "coverage": "codecov",
     "docs": "typedoc packages/aws-amplify/src --excludePrivate --ignoreCompilerErrors --mode file --theme docs/amplify-theme/typedoc --out docs/api",
     "build": "lerna exec yarn build",
@@ -37,6 +39,7 @@
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
     "codecov": "^1.0.1",
+    "cypress": "^3.0.1",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
