--- a/packages/aws-amplify/tsconfig.json
+++ b/packages/aws-amplify/tsconfig.json
@@ -16,10 +16,8 @@
         "moduleResolution": "node",
         "allowJs": false,
         "declaration": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "../../node_modules/@types"
-        ]
+        "typeRoots": [ "./node_modules/@types" ],
+        "types": [ "node" ]
     },
     "include": [
         "src/**/*"
