--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/api",
-  "version": "0.1.0",
+  "version": "0.1.1-unstable.0",
   "description": "Api category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,13 +49,13 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^0.1.1-unstable.0",
+    "@aws-amplify/cache": "^0.1.1-unstable.0",
+    "@aws-amplify/core": "^0.1.3-unstable.0",
     "@types/zen-observable": "^0.5.3",
-    "zen-observable": "^0.8.6",
-    "graphql": "0.13.0",
     "axios": "^0.17.0",
-    "@aws-amplify/auth": "^0.1.0",
-    "@aws-amplify/core": "^0.1.0",
-    "@aws-amplify/cache": "^0.1.0"
+    "graphql": "0.13.0",
+    "zen-observable": "^0.8.6"
   },
   "jest": {
     "transform": {
