--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/core",
-  "version": "0.1.2",
+  "version": "0.1.3-unstable.0",
   "description": "Core category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -54,8 +54,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "url": "^0.11.0",
-    "aws-sdk": "2.198.0"
+    "aws-sdk": "2.198.0",
+    "url": "^0.11.0"
   },
   "jest": {
     "transform": {
