--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/storage",
-  "version": "0.1.0",
+  "version": "0.1.1-unstable.0",
   "description": "Storage category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,8 +49,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "aws-sdk": "2.198.0",
-    "@aws-amplify/core": "^0.1.0"
+    "@aws-amplify/core": "^0.1.3-unstable.0",
+    "aws-sdk": "2.198.0"
   },
   "jest": {
     "transform": {
