--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/analytics",
-  "version": "0.1.1-unstable.0",
+  "version": "1.0.0",
   "description": "Analytics category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,8 +49,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/cache": "^0.1.1-unstable.0",
-    "@aws-amplify/core": "^0.1.3-unstable.0",
+    "@aws-amplify/cache": "^1.0.0",
+    "@aws-amplify/core": "^1.0.0",
     "aws-sdk": "2.198.0",
     "uuid": "^3.2.1"
   },
