--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/auth",
-  "version": "0.1.1-unstable.0",
+  "version": "1.0.0",
   "description": "Auth category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,8 +49,8 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/cache": "^0.1.1-unstable.0",
-    "@aws-amplify/core": "^0.1.3-unstable.0",
+    "@aws-amplify/cache": "^1.0,0",
+    "@aws-amplify/core": "^1.0.0",
     "amazon-cognito-auth-js": "^1.1.9",
     "amazon-cognito-identity-js": "^2.0.0"
   },
