--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify",
-  "version": "1.0.2-unstable.0",
+  "version": "1.0.0",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -49,13 +49,13 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/analytics": "^0.1.1-unstable.0",
-    "@aws-amplify/api": "^0.1.1-unstable.0",
-    "@aws-amplify/auth": "^0.1.1-unstable.0",
-    "@aws-amplify/cache": "^0.1.1-unstable.0",
-    "@aws-amplify/core": "^0.1.3-unstable.0",
-    "@aws-amplify/interactions": "^0.1.1-unstable.0",
-    "@aws-amplify/pubsub": "^0.1.1-unstable.0",
-    "@aws-amplify/storage": "^0.1.1-unstable.0"
+    "@aws-amplify/analytics": "^1.0.0",
+    "@aws-amplify/api": "^1.0.0",
+    "@aws-amplify/auth": "^1.0.0",
+    "@aws-amplify/cache": "^1.0.0",
+    "@aws-amplify/core": "^1.0.0",
+    "@aws-amplify/interactions": "^1.0.0",
+    "@aws-amplify/pubsub": "^1.0.0",
+    "@aws-amplify/storage": "^1.0.0"
   }
 }
