--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/core",
-  "version": "0.1.3-unstable.0",
+  "version": "1.0.0",
   "description": "Core category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
