--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/pubsub",
-  "version": "0.1.1-unstable.0",
+  "version": "1.0.0",
   "description": "Pubsub category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,7 +49,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/core": "^0.1.3-unstable.0",
+    "@aws-amplify/core": "^1.0.0",
     "@types/paho-mqtt": "^1.0.3",
     "@types/zen-observable": "^0.5.3",
     "paho-mqtt": "^1.0.4",
