--- a/packages/pushnotifications/package.json
+++ b/packages/pushnotifications/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aws-amplify/pushnotification",
-  "version": "0.1.1-unstable.0",
+  "version": "1.0.0",
   "description": "Push notifications category of aws-amplify",
   "main": "./lib/index.js",
   "module": "./lib/index.js",
@@ -49,7 +49,7 @@
     "webpack": "^3.5.5"
   },
   "dependencies": {
-    "@aws-amplify/core": "^0.1.3-unstable.0"
+    "@aws-amplify/core": "^1.0.0"
   },
   "peerdependencies": {
     "react-native": "^0.55.0"
