--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.8.0",
     "typedoc": "^0.9.0",
-    "typescript": "2.6.2",
+    "typescript": "^2.9.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5"
