--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
     "codecov": "^1.0.1",
-    "cypress": "^3.0.1",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
@@ -50,7 +49,7 @@
     "tslint": "^5.7.0",
     "tslint-config-airbnb": "^5.8.0",
     "typedoc": "^0.9.0",
-    "typescript": "^2.9.2",
+    "typescript": "2.6.2",
     "typescript-formatter": "^6.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5"
