--- a/packages/aws-amplify/package.json
+++ b/packages/aws-amplify/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-amplify",
-  "version": "0.1.6",
+  "version": "0.4.9-unstable.1",
   "description": "AWS Amplify is a JavaScript library for Frontend and mobile developers building cloud-enabled applications.",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
