--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,6 +5,9 @@
   "main": "./lib/index.js",
   "module": "./lib/index.js",
   "typings": "./lib/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "tslint 'src/**/*.ts' && jest --coverage",
     "build-with-test": "npm run clean && npm test && tsc && webpack",
@@ -50,7 +53,7 @@
     "@aws-amplify/cache": "^1.0.0",
     "@aws-amplify/core": "^1.0.0",
     "amazon-cognito-auth-js": "^1.1.9",
-    "amazon-cognito-identity-js": "^2.0.0"
+    "amazon-cognito-identity-js": "^2.0.14"
   },
   "jest": {
     "transform": {
