--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amazon-cognito-identity-js",
   "description": "Amazon Cognito Identity Provider JavaScript SDK",
-  "version": "2.0.14",
+  "version": "2.0.15-unstable.0",
   "author": {
     "name": "Amazon Web Services",
     "email": "aws@amazon.com",
