--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
     "codecov": "^1.0.1",
+    "compression-webpack-plugin": "^1.1.3",
     "jest": "^22.4.3",
     "json-loader": "^0.5.7",
     "lerna": "^2.4.0",
